; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_api.c_crypto_probing_notify.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_api.c_crypto_probing_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_chain = common dso_local global i32 0, align 4
@NOTIFY_DONE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"cryptomgr\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_probing_notify(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @blocking_notifier_call_chain(i32* @crypto_chain, i64 %6, i8* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @NOTIFY_DONE, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = call i32 @request_module(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %14 = load i64, i64* %3, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @blocking_notifier_call_chain(i32* @crypto_chain, i64 %14, i8* %15)
  store i32 %16, i32* %5, align 4
  br label %17

17:                                               ; preds = %12, %2
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @blocking_notifier_call_chain(i32*, i64, i8*) #1

declare dso_local i32 @request_module(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
